Fix SAM build error: change CodeUri to point to source directory instead of build output

--- a/lambda-infra/template.yaml
+++ b/lambda-infra/template.yaml
@@ -19,7 +19,7 @@ Resources:
   ReactiveFunction:
     Type: AWS::Serverless::Function
     Properties:
-      CodeUri: ../lambda-core/build/libs/
+      CodeUri: ../lambda-core/
       PackageType: Zip
       Description: Función Lambda reactiva con Spring Boot 3.x y Project Reactor
       Environment:
