--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -86,6 +86,7 @@ jobs:
     name: SAM Validation
     runs-on: ubuntu-latest
     needs: build
+    continue-on-error: true
     
     steps:
       - name: Checkout code
