Migrar a Java 25 con Spring Boot 3.4.13 y deshabilitar AOT
- Actualizar Spring Boot de 3.3.1 a 3.4.13 (compatible con Java 25)
- Actualizar Spring Cloud Function a 2024.0.0
- Agregar ASM 9.8 explícitamente para soporte de Java 25
- Deshabilitar procesamiento AOT (incompatible con Spring Cloud Function)
- Actualizar README con versiones correctas (Spring Boot 3.4.13, Gradle 9.2.1)
- Actualizar workflow de CI/CD para excluir tareas AOT
- Proyecto compila y levanta correctamente con Java 25

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,10 +33,10 @@ jobs:
         run: chmod +x gradlew || true
       
       - name: Build with Gradle
-        run: ./gradlew build -x test --no-daemon
+        run: ./gradlew build -x test -x processAot -x compileAotJava -x processAotResources -x aotClasses --no-daemon
       
       - name: Run tests
-        run: ./gradlew test --no-daemon
+        run: ./gradlew test -x processAot -x compileAotJava -x processAotResources -x aotClasses --no-daemon
       
       - name: Upload test results
         if: always()
@@ -110,7 +110,7 @@ jobs:
           use-installer: true
       
       - name: Build project
-        run: ./gradlew clean build -x test --no-daemon
+        run: ./gradlew clean build -x test -x processAot -x compileAotJava -x processAotResources -x aotClasses --no-daemon
       
       - name: SAM Build
         working-directory: lambda-infra
