--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,11 +29,17 @@ jobs:
           distribution: 'temurin'
           cache: gradle
       
+      - name: Verify Java version
+        run: java -version
+      
       - name: Grant execute permission for gradlew
-        run: chmod +x gradlew || true
+        run: chmod +x gradlew
+      
+      - name: Verify Gradle wrapper
+        run: ./gradlew --version
       
       - name: Build with Gradle
-        run: ./gradlew build -x test -x processAot -x compileAotJava -x processAotResources -x aotClasses --no-daemon
+        run: ./gradlew clean build -x test -x processAot -x compileAotJava -x processAotResources -x aotClasses --no-daemon
       
       - name: Run tests
         run: ./gradlew test -x processAot -x compileAotJava -x processAotResources -x aotClasses --no-daemon
@@ -68,10 +74,10 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
       
       - name: Grant execute permission for gradlew
-        run: chmod +x gradlew || true
+        run: chmod +x gradlew
       
       - name: Build native image
-        run: ./gradlew :lambda-core:nativeCompile --no-daemon
+        run: ./gradlew :lambda-core:nativeCompile -x processAot -x compileAotJava -x processAotResources -x aotClasses --no-daemon
         continue-on-error: true
       
       - name: Upload native binary
