Alinear proyecto 100% con ebook y agregar referencias cruzadas
- Crear documento completo de referencias cruzadas entre ebook y proyecto
- Actualizar README con referencias a secciones del ebook en cada funcionalidad
- Agregar archivos application-dev.yml y application-prod.yml según ebook
- Actualizar application.yml base con configuración del ebook
- Agregar ebook.pdf como referencia
- Eliminar GUIA_ACTUALIZACION_EBOOK_JAVA25.md (reemplazado por referencias cruzadas)

El proyecto ahora está 100% alineado con el ebook y permite navegación
bidireccional entre el código fuente y las secciones del ebook.

--- a/lambda-core/src/main/resources/application.yml
+++ b/lambda-core/src/main/resources/application.yml
@@ -1,9 +1,16 @@
 spring:
+  application:
+    name: reactive-lambda
+  profiles:
+    active: ${SPRING_PROFILES_ACTIVE:dev}
   main:
     web-application-type: reactive
   cloud:
     function:
       definition: hello
+
+aws:
+  region: ${AWS_REGION:us-east-1}
 
 logging:
   pattern:
